# AutoCapture

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml
autocapture/: __init__.py  __main__.py  app.py  config.py  logging.py  logging_setup.py
autocapture/camera/: __init__.py  base.py  preview.py  service.py  webcam.py  wia_dslr.py
autocapture/data/: __init__.py  export.py  model.py
autocapture/storage/: __init__.py  files.py
autocapture/ui/: __init__.py  dialogs.py  main_window.py  widgets.py
tests/: test_data_model.py  test_export.py  test_output_root_dialog.py
