[project]
name = "autocapture"
version = "0.1.0"
description = "Simplify picture-taking and keeping track of your subjects' details."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "opencv-python-headless>=4.11.0.86",
    "polars>=1.39.3",
    "pyside6>=6.11.0",
    "pywin32>=308; platform_system == 'Windows'",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "fastexcel>=0.19.0",
    "isort>=8.0.1",
    "nuitka>=4.0.7",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pylint.main]
py-version = "3.14"
extension-pkg-allow-list = ["PySide6"]

[tool.pylint.typecheck]
ignored-modules = ["PySide6", "PySide6.QtCore", "PySide6.QtGui", "PySide6.QtWidgets"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cache-clear --color=yes --code-highlight=yes --cov --cov-branch --cov-report=term --cov-report=xml -vvv"
testpaths = ["tests"]
